<resources>
    <string name="app_name">HappyHour</string>
    <string name="enter_email_hint">enter email</string>
    <string name="enter_password_hint">enter password</string>
    <string name="company_check_box">Company</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buyer_messages_text_view">Messages</string>
    <string name="seller_messages_text_view">Messages</string>
    <string name="seller_send_message_fragment_hint">enter HappyHour message</string>
    <string name="send_happy_hour_message_button">Send</string>
    <string name="happy_hour_till_text_view">HappyHour till :</string>
    <string name="enter_company_name_edit_text">enter company name</string>
    <string name="enter_happy_hour_message_edit_text">enter HappyHour message</string>
    <string name="enter_happy_hour_end_time_edit_text">enter time when HappyHour ends</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>